<resources>
    <string name="app_name">Damn Vulnerable Mobile ICC</string>
    <string name="welcome_msg">Welcome to DVM-ICC!</string>
    <string name="introductionHeading">Introduction</string>
    <string name="whyICCHeading">Importance of ICC</string>
    <string name="androidFundamentalsHeader">Android Security Fundamentals</string>
    <string name="androidFundamentals">
        In Android, each application is assigned a unique user ID known only by the OS. The files
        of an app can only be accessed by a user with the same ID as that of the app. Moreover,
        each app runs in its own process by default, and each process runs in its own virtual
        machine. Therefore, each Android app has its own sandbox, which
        enhances the security of the system, as apps are separated from each other.
    </string>
    <string name="apiLevelsHeader">API Levels</string>
    <string name="apiLevels">
        Code written by mobile app developers can interact with the Android system through its
        Application Programming Interface, or API. This API is made up of various packages, classes
        and XML elements that are used to define UI elements, access system resources, define
        application security, and more.

        \n\nThroughout the development of Android,
        the API is modified to introduce new features and improve security or performance. Therefore,
        in order to identify each incremental version of the API, a unique integer is assigned to
        each version or level. This level is independent of the version of the Android release, as
        the API level is solely concerned with modifications in the API and not backend code.

        \n\nHowever, in practice, each Android release usually comes with a new API level. Over the
        years, there have been changes to the API that improved software security, and therefore
        some vulnerabilities are harder or impossible to exploit in current API levels.

        \n\nThe suite of apps developed as part of this project are designed to run on API 25, or
        Android 7.1. They can still run on newer devices, but some vulnerabilities, particularly
        broadcast theft and broadcast injection, are limited on Android 8 and newer.
    </string>
    <string name="androidComponentsHeader">Android Components</string>
    <string name="androidComponents">
        Android mobile applications are made up of logical building blocks called components. In
        Android, a component is an entity which allows the user or the operating system to access
        the application. Therefore, a component does not necessarily correlate
        with other computing concepts such as processes, threads, and classes. When any component
        of an app needs to be run, the system starts a process for that app.

        \n\nThere are four types of components in Android: activities, services, broadcast receivers
        and content providers.
    </string>
    <string name="androidManifestHeading">Android Manifest</string>
    <string name="androidManifestText">
        The manifest of an Android application is an XML file that gives the OS information
        about the app’s structure, capabilities and needs. All Android app components, except
        broadcast receivers, need to be declared in the manifest file, and for each component you
        can define permission requirements and the capabilities of the component.

        \n\nMoreover, the developer must say in the manifest file what hardware or software system
        features the app uses, whether those features are required, and what is the minimum API
        level that the app can run on. For example, an app would not be installed on a device if
        the app’s manifest said it required a microphone and the mobile device did not have
        a microphone.
    </string>
    <string name="activitiesHeading">Activities</string>
    <string name="activitiesText">
        Activities represent the individual app UI screens through which you interact with the app.
        For example, a news aggregator application might have an activity for viewing a list of
        news articles and another for changing the app’s notification settings.

        \n\nActivities are used by the operating system to keep track of what the you see on screen,
        of what information you are interested in, and of minimized apps.

        \n\nActivities are independent components and therefore it is possible that activities of
        different apps collaborate. This is what happens in a browser when you want to share
        a link and you have to choose between various messaging applications.
    </string>
    <string name="servicesHeading">Services</string>
    <string name="servicesText">
        Services are components used for running more long-term operations in the background.
        A service does not represent a separate process or thread, but an interface for the system
        to let the app work in the background. A service does not have a UI by itself.

        \n\nExamples of the usage of services include VPN apps that maintain a VPN connection in
        the background or when WhatsApp performs periodical backups of messages.

        \n\nThere are three types of services: foreground services, which perform tasks that are
        noticeable to the user and must display a notification, background services, which do
        things that are not noticeable by the user, and bound services, which act as servers
        responding to requests made by client components.
    </string>
    <string name="receiverHeading">Broadcast Receivers</string>
    <string name="receiverText">
        Broadcast receivers are components that an app uses to receive system wide broadcasts.
        These broadcasts are messages sent by the operating system or by other apps. Using
        receivers, applications can react to various events. A receiver can
        listen for an event even when the app is not running.

        \n\nFor example, the system can send a broadcast letting apps know that the device’s
        battery is low or that airplane mode has been activated, or an application can send a
        message that the download of a file has finished, and it can be accessed now.

        \n\nUsually, broadcast receivers do a minimal amount of work and simply start other
        components like activities or services to handle the event. Broadcast receivers do not have
        a user interface, but can display notifications. In addition, it is worth noting that they
        do not have to be declared in the manifest file but can be created programmatically as well.

        \n\nThere are three types of broadcasts:
            \n\n• Normal broadcasts – These are sent to all receivers at the same time, and each receiver can react independently of other receivers.
            \n\n• Ordered broadcasts – These are sent to receivers one by one. Unlike normal broadcast,
        the receiver currently processing the broadcast can change what information the broadcast
        contains, and can even cancel the broadcast. Broadcast receivers can be registered with a
        certain priority for getting broadcasts. Receivers with the same priority get broadcasts
        in random order.
            \n\n• Sticky broadcasts – Broadcasts of this type are persistent, as they remain after
        they have been broadcast to all receivers and are re-broadcast to any newly created
        receivers. They have been deprecated since API level 21, because they are very insecure,
        and will not be covered by this project.
    </string>
    <string name="providerHeading">Content Providers</string>
    <string name="providerText">
        Content providers are interfaces through which apps can access data stored in persistent
        storage such as a remote server, an SQLite database or local file storage. A provider can
        be used by components of other apps. Therefore, they are used by the system to manage
        access to shared data. Content providers can restrict access to the data to apps with
        certain permissions and give temporary access to certain files only.
    </string>
    <string name="permissionsHeading">Android Permissions</string>
    <string name="permissionsText">
        Android follows the principle of least privilege. This means that, by default, each app
        only has access to the resources that it needs to complete its job, and cannot perform any
        action that could affect other apps, the OS or the user.

        \n\nThis principle is enforced through a system of permissions, meaning that an application
        can only access sensitive data, system features or components of other applications if it
        possesses the necessary requirements. For instance, an application needs the correct
        permission if it wants to access the user’s contacts or the device’s camera or file system.

        \n\nThe developer can protect the components of an app with permission requirements by
        adding an android:permission tag in the manifest file. These elements can be added once
        for the whole application, or for each component.

        \n\nThere are four types of permissions, based on the level of protection they allow:
            \n\n• Normal permissions – Permissions for access to resources that, if granted, would
                pose a minimal risk to the user, such as the permission to set the time zone.
                They are given automatically.
            \n\n• Dangerous permissions – These permissions are for resources related to private
                user information, or that can affect the state of the system or of other apps.
                The user needs to give these permissions explicitly. Examples include permissions
                to access the camera or the device location.
            \n\n• Signature permissions – These are special permissions, designed for use among a
                group of apps created by the same developer, for purposes specific to those apps.
                An app is automatically granted a signature permission only if it is signed by
                the same certificate as the app that defined the permission. In this case, a
                certificate is a unique identification for the developer of the app, like the
                TLS certificates used to verify the authenticity of websites. The certificate
                can be self-signed by the developer.
            \n\n• Signature or System permissions – a deprecated type of permission since API level
                23. It is automatically granted only if the app is signed by the same certificate
                as the app that declared the permission, or if the app is in the system folder.
                Apps in the system folder are pre-installed by the device’s vendor.

        \n\nApplications have the ability to declare their own permissions. These permissions can
        be used to restrict access to components of an application. This is done by declaring a
        permission in the manifest file of the app. This declaration specifies the permission’s
        full name, a label, a description, and the protection level.

        \n\nExample of a custom permission declaration:
    </string>
    <string name="lowLevelSentence">Low security level</string>
    <string name="mediumLevelSentence">Medium security level</string>
    <string name="highLevelSentence">High security level</string>
    <string name="veryHighLevelSentence">Very high security level</string>
    <string name="impossibleLevelSentence">Impossible security level</string>
</resources>