<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/broadcastTheftHelpScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/securityLowHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="20dp"
            android:paddingBottom="12dp"

            android:text="@string/lowLevelSentence"
            android:textAppearance="@style/manifestFragmentAppNameStyle" />

        <TextView
            android:id="@+id/securityLowDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textAppearance="@style/textStyle" />

        <io.github.kbiakov.codeview.CodeView
            android:id="@+id/securityLowManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/securityMediumHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="20dp"
            android:paddingBottom="12dp"

            android:text="@string/mediumLevelSentence"
            android:textAppearance="@style/manifestFragmentAppNameStyle" />

        <TextView
            android:id="@+id/securityMediumDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textAppearance="@style/textStyle" />

        <io.github.kbiakov.codeview.CodeView
            android:id="@+id/securityMediumManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/securityHighHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="20dp"
            android:paddingBottom="12dp"

            android:text="@string/highLevelSentence"
            android:textAppearance="@style/manifestFragmentAppNameStyle" />

        <TextView
            android:id="@+id/securityHighDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textAppearance="@style/textStyle" />

        <io.github.kbiakov.codeview.CodeView
            android:id="@+id/securityHighManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/securityVeryHighHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="20dp"
            android:paddingBottom="12dp"

            android:text="@string/veryHighLevelSentence"
            android:textAppearance="@style/manifestFragmentAppNameStyle" />

        <TextView
            android:id="@+id/securityVeryHighDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textAppearance="@style/textStyle" />

        <io.github.kbiakov.codeview.CodeView
            android:id="@+id/securityVeryHighManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/securityImpossibleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="20dp"
            android:paddingBottom="12dp"

            android:text="@string/impossibleLevelSentence"
            android:textAppearance="@style/manifestFragmentAppNameStyle" />

        <TextView
            android:id="@+id/securityImpossibleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textAppearance="@style/textStyle" />

        <io.github.kbiakov.codeview.CodeView
            android:id="@+id/securityImpossibleManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

    </LinearLayout>
</ScrollView>